--- a/data/html/loadsavefile.html
+++ b/data/html/loadsavefile.html
@@ -45,15 +45,15 @@
             <div class="thankscon">
                 <ul>
                     <li>
-                        <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a> for marking such a great game.
+                        <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a> for making such a great game.
                     </li>
                     <li>
                         <a href="http://www.tinybuild.com/" target="_blank">tinyBuild</a> for publishing it.
                     </li>
                     <li>
-                        <a href="https://graveyardkeeper.gamepedia.com/Graveyard_Keeper_Wiki" target="_blank">Graveyard Keeper Wiki</a> for having such great resources which I could use to check my code and
+                        <a href="https://graveyardkeeper.gamepedia.com/Graveyard_Keeper_Wiki" target="_blank">Graveyard Keeper WIKI</a> for having such great resources which I could use to check my code and
                         already extracting the game icons + naming them, so I didn't have to try to extract the sprite atlas
-                        information.
+                        information (at least for earlier versions of the editor).
                     </li>
                     <li>
                         <a href="https://github.com/ChrisKnott/Eel" target="_blank">Eel</a> for making it easy for me to create a HTML GUI in a python script.
@@ -74,10 +74,10 @@
                     </li>
                     <li>
                         No sprites / images used, were created by me, they are from
-                        <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a> (and most of them were extracted from the Wiki)
+                        <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a> (and most of them were extracted from the WIKI)
                     </li>
                     <li>
-                        Additionally the localisation file is also more or less extracted from
+                        Additionally the localization file is also more or less extracted from
                         <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a> but I want to add that they are not complete for all ID's and might contain mistakes
                         (like the ID's and translations shifted by 1)
                     </li>
@@ -95,7 +95,7 @@
                     </li>
                     <li>
                         If you find bugs or have feature requests (like an idea to add a functionality) feel free to report them on the
-                        <a href="https://github.com/NetroScript/Graveyard-Keeper-Savefile-Editor" target="_blank">Github Page</a>.
+                        <a href="https://github.com/NetroScript/Graveyard-Keeper-Savefile-Editor" target="_blank">GitHub Page</a>.
                     </li>
                 </ul>
             </div>
