--- a/data/html/no settings.html
+++ b/data/html/no settings.html
@@ -64,7 +64,7 @@
                                 </label>
                             </div>
                             <div class="note">This disables all the applications checks for invalid data, meaning the likelihood of you breaking
-                                your safe with a non existant item f.e. is increased. But if you know the internal id of an item and it doesn't
+                                your safe with a non existent item f.e. is increased. But if you know the internal id of an item and it doesn't
                                 exist, you can add it with this option. This option does not require an application restart, but it requires to
                                 reload the page (so that the settings are loaded again).
                             </div>
