--- a/data/html/index.html
+++ b/data/html/index.html
@@ -227,7 +227,7 @@
         </div>
 
         <div class="timecontainer">
-            <div class="note"><b>WARNING:</b><br>Modify the time at your own risk. Don't forget NPC's walk to all events
+            <div class="note hover"><b>WARNING:</b><br>Modify the time at your own risk. Don't forget NPC's walk to all events
             and they get triggered at certain positions at certain times - meaning if you change the time you can mess up their
             AI.<br>If you want to meet the merchant f.e. - set the day to Gluttony (the 3rd one) and change the Time to f.e.
             3:00 - this is because the change from morning to day leaves the merchant enough time to walk to the barn and also
@@ -257,14 +257,17 @@
 
         <div class="row miscbuttons">
             <div class="btn deldrops col s6 offset-s3">Remove all Drops</div>
-            <div class="note col s12"><b>WARNING:</b><br>For the perfect bodies/workers/graves to work it is necessary to have the technologies / crafting recipes like embalming because otherwise the game "resets" those bodies / decorations to a state which you could have done with your current tech tree / advancement. For this reason a "Unlock the entire tech tree" button was added. <b>BUT</b> the game save is rather complex, meaning even if you have all technologies and theoretically you couldn't have advanced this far the bodies will be bugged, f.e. broken in the morgue table. I assume (without having looked at the game code) that you need a certain progress in the game. F.e. when I used all technologies + perfect bodies on a completely new save, the bodies had 7 skulls, but actually (when taking a look at the exported save) the bodies where the correct bodies. So progress normally and use the unlock tech tree button or perfect worker button on a late game save (or where you already manually could produce the perfect bodies, but are lacking the resources)</div>
-            <p class="btn workereff col s12">Set all workers to 40% Efficiency</p>
+            <div class="btn workereff col s12">Set all workers to 40% Efficiency</div>
+            <div class="note hover col s12"><b>WARNING:</b><br>For the perfect bodies/workers/graves to work it is necessary to have the technologies / crafting recipes like embalming because otherwise the game "resets" those bodies / decorations to a state which you could have done with your current tech tree / advancement. For this reason a "Unlock the entire tech tree" button was added. <b>BUT</b> the game save is rather complex, meaning even if you have all technologies and theoretically you couldn't have advanced this far the bodies will be bugged, f.e. broken in the morgue table. I assume (without having looked at the game code) that you need a certain progress in the game. F.e. when I used all technologies + perfect bodies on a completely new save, the bodies had 7 skulls, but actually (when taking a look at the exported save) the bodies where the correct bodies. So progress normally and use the unlock tech tree button or perfect worker button on a late game save (or where you already manually could produce the perfect bodies, but are lacking the resources)</div>
             <div class="btn perbody col s12">Replace all the bodies in graves with perfect bodies</div>
-            <p class="btn perdeco col s12">Set all grave decorations to the highest</p>
+            <div class="btn perdeco col s12">Set all grave decorations to the highest</div>
             <div class="btn perempty col s12">Replace all empty graves with perfect graves</div>
-            <p class="btn pertech col s12">Unlock the entire tech tree [pre 1.200]</p>
-            <div class="note col s12"><b>WARNING:</b><br>This replaces your current donkey object with the a working one from my savefile. It will then be in front of your morgue. <b>Don't be surprised if it doesn't drop the body even if you have enough carrots. Through replacing the donkey this check gets skipped.</b> Just put 10 more in and the donkey should work - I tried it on a save in the bug report channel of the discord (from Lazy Bear Games). ONLY USE THIS IF THE BUG FIX OF THE DEVELOPERS DIDN'T WORK AND YOU ALREADY HAVE THE BOX WITH CARROTS. <b>Also only use this if your donkey is actually stuck!</b></div>
+            <div class="btn pertech col s12">Unlock the entire tech tree</div>
+            <div class="note hover col s12"><b>Note:</b><br>This is pre version 1.200</div>
             <div class="btn repairdonkey col s12">Replace your current donkey NPC</div>
+            <div class="note hover col s12"><b>WARNING:</b><br>This replaces your current donkey object with the a working one from my savefile. It will then be in front of your morgue. <b>Don't be surprised if it doesn't drop the body even if you have enough carrots. Through replacing the donkey this check gets skipped.</b> Just put 10 more in and the donkey should work - I tried it on a save in the bug report channel of the discord (from Lazy Bear Games). ONLY USE THIS IF THE BUG FIX OF THE DEVELOPERS DIDN'T WORK AND YOU ALREADY HAVE THE BOX WITH CARROTS. <b>Also only use this if your donkey is actually stuck!</b></div>
+            <div class="btn resetmorgue col s12">Reset Morgue Counter</div>
+            <div class="note hover col s12"><b>Note:</b><br>This will set your current morgue spaces used to 0, meaning if it got bugged at some point you will have at least 1 delivery. (Although I do not know how this value gets set again, like if it is only increased by one or the entire morgue is checked for bodies)</div>
         </div>
     </form>
 </div>
@@ -308,7 +311,7 @@
             </div>
         </div>
         <p>Equipped Items:</p>
-<div class="note"><b>WARNING:</b><br>Change the item to a non tool item at your own risk.</div>
+<div class="note hover"><b>WARNING:</b><br>Change the item to a non tool item at your own risk.</div>
         <div class="equipped-items">
         </div>
     </form>
@@ -970,6 +973,13 @@
                 $(".repairdonkey").addClass("disabled");
                 $(".repairdonkey").unbind("click");
             })
+            // Handle clicking the repair donkey
+            $(".resetmorgue").click(function () {
+                data.switches.resetmorgue = true;
+                $(".resetmorgue").addClass("disabled");
+                $(".resetmorgue").unbind("click");
+            })
+            
             
 
             // Remove the loading circle so the user now knows he can use all the features.
