--- a/data/html/loadsavefile.html
+++ b/data/html/loadsavefile.html
@@ -70,16 +70,15 @@
             <div class="thankscon">
                 <ul>
                     <li>
-                        Every loaded save file is kept in memory, meaning you can expect almost up to 200 MB per save file which you load right.
+                        Every loaded save file is kept in memory, meaning you can expect almost up to 200 MB per save file which you load.
                     </li>
                     <li>
                         No sprites / images used, were created by me, they are from
                         <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a> (and most of them were extracted from the WIKI)
                     </li>
                     <li>
-                        Additionally the localization file is also more or less extracted from
-                        <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a> but I want to add that they are not complete for all ID's and might contain mistakes
-                        (like the ID's and translations shifted by 1)
+                        Additionally the localization file is extracted from
+                        <a href="http://lazybeargames.com/" target="_blank">Lazy Bear Games</a>
                     </li>
                     <li>
                         You are able change all the values in the editor, but especially values like items can't be perfectly recreated and there
