--- a/data/html/loadsavefile.html
+++ b/data/html/loadsavefile.html
@@ -219,20 +219,21 @@
 
         // Allow python to call the function to display that new item information is available
         eel.expose(checkiVersion);
+
         function checkiVersion(oldv, newv) {
             if (oldv.split("\n").pop().split(" ")[0] < newv.split("\n").pop().split(" ")[0]) {
-                            $(".con").prepend(`
+                $(".con").prepend(`
 <div 1="" class="intro newv">
     <h3>A new Version for the items is available! Get it manually on
-        <a href="https://github.com/NetroScript/Graveyard-Keeper-Savefile-Editor" target="_blank">Github</a>. There were the following changes since your version (`+oldv.split("\n").pop().split(" ")[0]+`):</h3>
-    <div class="changes">`+ newv.split(new RegExp(oldv.split("\n").pop().split(" ")[0] + ".+")).slice(1).join("").trim() +`</div>
+        <a href="https://github.com/NetroScript/Graveyard-Keeper-Savefile-Editor" target="_blank">Github</a>. There were the following changes since your version (` + oldv.split("\n").pop().split(" ")[0] + `):</h3>
+    <div class="changes">` + newv.split(new RegExp(oldv.split("\n").pop().split(" ")[0] + ".+")).slice(1).join("").trim() + `</div>
     <h3>Alternatively you can click <a id="autoupdateitems" href="#">here</a> to let python update automatically - the application will close itself after finishing.</h3>
 </div>`);
-$("#autoupdateitems").click(function(){
-eel.updateitemversion();
-$("#autoupdateitems").off();
-$(document.body).append("<div style='position:fixed;z-index:10000;width:100%;height:100%;left:0px;top:0px;background-color:rgba(0,0,0,0.8)'></div>")
-})
+                $("#autoupdateitems").click(function () {
+                    eel.update_item_version();
+                    $("#autoupdateitems").off();
+                    $(document.body).append("<div style='position:fixed;z-index:10000;width:100%;height:100%;left:0px;top:0px;background-color:rgba(0,0,0,0.8)'></div>")
+                })
             }
         }
 
@@ -249,7 +250,7 @@ $(document.body).append("<div style='position:fixed;z-index:10000;width:100%;hei
 
         // When the page is loaded "tell" that the python application and then load the possible save files
         $(document).ready(function () {
-            eel.siteloaded()()
+            eel.site_loaded()()
             getSaveFiles();
             getSettings();
         });
@@ -280,7 +281,7 @@ $(document.body).append("<div style='position:fixed;z-index:10000;width:100%;hei
 
         // Function to load the save files and add them to the DOM
         async function getSaveFiles() {
-            data = await eel.getsavefiles()()
+            data = await eel.get_savefiles()()
             console.log(data)
             // Remove the loading circle
             $(".consaves").html("");
